--- a/leadership.css
+++ b/leadership.css
@@ -1,14 +1,9 @@
-
 @import url('https://fonts.googleapis.com/css?family=League+Script|Quicksand:300,400,500,700');
 @import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script');
 
-
-
-
-
 .navbar{
   font-family: 'Quicksand', sans-serif;
-  font-weight: bold;
+  font-weight: bold !important;
 }
 
 a:hover{
@@ -40,18 +35,15 @@ a:hover{
 /* Header*/
 h1{
 	text-align: center;
-  	font-size:2.25em;
+  	font-size:2.0em !important;
   	color: #FFBFB7;
   	font-weight: bold;
-  	font-family: 'Petit Formal Script', cursive;
+  	font-family: 'Petit Formal Script', cursive !important;
 }
 
 p{
 	font-family: 'Quicksand', sans-serif;
   	font-size:1.2em;
-}
-b{
-	font-weight:1000;
 }
 
 h2{
@@ -65,11 +57,11 @@ h2{
 @media (max-width: 375px) {
 	.title-padding{
 		padding-bottom: 0.4em !important;
+		text-align: left !important;
 		font-size: 1.6em !important;
 	}
 	.subtitle-padding{
-		padding-bottom:0em !important;
-		margin-bottom:0px !important;
+		padding-bottom:0em;
 		font-size:1.3em !important;
 	}
 	.header-style{
@@ -78,64 +70,70 @@ h2{
 	}
 	.paragraph-style{
 		font-size:1.1em !important;
-	}	
-}
-@media (min-width:1000px){
-	.desktop-style{
-		padding-left: 60px;
-		padding-right: 60px;
 	}
 }
-	/* Slick CSS */
-
-.slick-arrow, .slick-arrow:focus, .slick-arrow:active {
-  background-color: #FFBFB7;
-  color: #FFFFFF;
+/*h4 {
+  font-family: 'Petit Formal Script', cursive;
+  font-size: 1.8em;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: bold;
+  line-height: 26.4%;
 }
+h5{
+  font-family: Quicksand;
+  font-size: 1.1em;
+}*/
 
-.button{
-	color:#FFBFB7;
+.leadershippage{
+	margin-top: 0%!important;
 }
-
-.slick-prev {
-  left: 0px;
-  z-index: 5;
+.full-container{
+	margin-right: -2000px;
+	margin-left: -2000px;
 }
-
-.slick-next {
-  right: 0px;
-  z-index: 5;
+.full-content{
+	padding-left: 2000px;
+	padding-right: 2000px;
 }
-
-
-.tagline{
-	padding-top: 80px;
-	padding-bottom: 100px;
-}
-
-.text-color{
-	color:#d9d9d9;
-	font-size: 2.0em;
-}
-.w3-border-bottom{
-	border-bottom-color: #FFFFFF !important; 
-}
-
 
 .full-padding{
 	padding-top: 0px;
 	padding-bottom:0px;
 }
-.light-pink{
-	background-color: #ffe8e6;
-}
-.pink-border {
-	border-bottom:15px solid rgba(249, 154, 139, 0.14);
-	height:0 !important;
-	min-height:0 !important;
+.w3-container, .w3-panel{
+	padding-right:20px;
+	padding-left: 20px;
 }
 
+.nametag{
+	padding-bottom: 5px;
+	padding-top: 5px;
+}
 
+.photo-padding{
+	padding-top: 16px;
+	padding-left: 16px;
+	padding-right: 16px;
+	padding-bottom:16px;
+}
+
+.quote{
+	margin-bottom: 60px;
+}
+.second-line{
+	padding-top: 8px;
+}
+@media (max-width: 375px) {
+.row-mobile{
+	padding-bottom: 0!important;
+}
+}
+
+.w3-border{
+	border-color: #FFFFFF !important;
+	padding:7px !important;
+}
 
 /*---------------------------FOOTER START--------------------*/
 .ginsystem-login {
@@ -316,8 +314,6 @@ a:hover {
 }
 
 /* FOOTER END */
-
-
 
 
 
