--- a/sisterhood.css
+++ b/sisterhood.css
@@ -14,25 +14,13 @@
    font-family: 'Open Sans',serif;
 }*/
 
-body {
-  padding-top: 0%;
-}
-
 /*@media and (min-width: 2px) {
   body {
     padding-top: 0px;
   }
 }*/
-<<<<<<< HEAD
 /* Font Styling and Sizing */
-/*
-h1{
-    font-family: 'Petit Formal Script', cursive !important;
-    font-weight: bold;
-    font-size: 2.25em !important;
-    color: #FFBFB7;
-}
-*/
+
 h1{
       text-align: center !important;
 /*  margin-top: 5%;*/
@@ -75,9 +63,27 @@ h2{
   /* fix padding under menu after resize */
   @media screen and (max-width: 767px) {
       body { padding-top: 30px; }
+        #stage a img {
+      width: 80vw;
+  }
+      #stage a:nth-of-type(1){
+          width: 80vw;
+      }
+      #stage a:nth-of-type(2){
+          width: 80vw;
+      }
   }
   @media screen and (min-width:768px) and (max-width: 991px) {
       body { padding-top: 90px; }
+              #stage a img {
+      width: 80vw;
+  }
+      #stage a:nth-of-type(1){
+          width: 80vw;
+      }
+      #stage a:nth-of-type(2){
+          width: 80vw;
+      }
   }
   @media screen and (min-width: 992px) {
       body { padding-top: 30px; }
@@ -94,17 +100,16 @@ a:hover{
 }
 
 .logo {
-  width: 30%;
-  height: auto;
+  width: 30% !important;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top:2.5%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px;
 }
 
 /*------BANNER START------*/
 .banner {
-  overflow-y: hidden;
+
   display: block;
   position: relative;
 }
@@ -116,29 +121,13 @@ a:hover{
 }
 /* BANNER END */
 
-/*.banner > .banner-text {
-  text-align: center;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #FF940C;
-  text-shadow: 3px 5px 4px rgba(0,0,0,0.3);
-  letter-spacing: 1em;
-  font-family: Montserrat;
-  text-transform: uppercase;
-  font-size: 3.2vw;
-  font-weight: bolder;
-
-}*/
-/* BANNER END */
-
 
 .sisterhood-page{
   margin-top: 64px;
   margin-bottom: 64px;
   /*margin-left: 2em;
   margin-right: 2em;*/
+    padding: 0px;
 }
 
 .sister-details{
@@ -146,41 +135,19 @@ a:hover{
 }
 
 .sister-body{
-  margin-left: 1em;
-  margin-right: 1em;
   margin-bottom: 2em;
-  font-family: Montserrat;
+  font-family: Quicksand;
   font-size:2.5vh;
   word-wrap: break-word;
 }
 
 .sister-body1{
-<<<<<<< HEAD
-    margin-left: 0px;
-    margin-right: 0px;
-=======
-  margin-left: 1em;
-  margin-right: 1em;
->>>>>>> 8e8955dad0e573056083b3071e42b6a6d0e2b588
   margin-bottom: 2em;
-  font-family: Montserrat;
+  font-family: Quicksand;
   font-size:2.5vh;
   word-wrap: break-word;
 }
 
-<<<<<<< HEAD
-=======
-.sister-title{
-  font-weight: bold;
-  font-style: italic;
-  font-size: 2em;
-  font-size:4.25vh;
-  font-family: Montserrat;
-  word-wrap: break-word;
-  text-shadow: 3px 2px 2px rgba(0,0,0,0.1); 
-}
-
->>>>>>> 8e8955dad0e573056083b3071e42b6a6d0e2b588
 .container img {
     width: 100%;
     height: auto;
@@ -212,6 +179,12 @@ a:hover{
 /*---------------------------FOOTER START--------------------*/
 .ginsystem-login {
   font-family: 'Quicksand', sans-serif;
+}
+footerbox{
+    width: 100%;
+    display: block;
+    padding: 0px;
+    margin: 0px;
 }
 
 .ginsystem-login input {
@@ -398,20 +371,15 @@ a:hover {
 
 /* Slideshow stack */
   #stage {
-    margin: 1em auto;
+/*    margin: 1em auto;*/
     width: 100%;
-    height: 100%;
-    padding-bottom: 2rem;
+
   }
 
   #stage a {
-    position: absolute;
   }
   #stage a img {
-    padding: .5rem;
-    border: .15rem solid #ccc;
-    background: #fff;
-      height: auto;
+      width: 35vw;
   }
 
   #stage a:nth-of-type(1) {
@@ -419,31 +387,83 @@ a:hover {
     animation-delay: 4s;
     animation-duration: 1s;
     z-index: 20;
+      position: absolute;
+      width: 35vw;
+      display: block;
   }
   #stage a:nth-of-type(2) {
     z-index: 10;
+      width: 35vw;
+      display:inherit !important;
   }
   #stage a:nth-of-type(n+3) {
     display: none;
   }
 
-  @keyframes fader {
-    from { opacity: 1.0; }
-    to   { opacity: 0.0; }
-  }
   #stage a::after {
-    position: absolute;
-    left: .72rem;
-    bottom: .85rem;
-    padding: 2px 0;
-    width: calc(100% - 22px);
+    position: relative;
+      display: block;
+    padding: 0px;
+      bottom: 1.725rem;
+/*    width: calc(100% - 22px);*/
+      width: 35vw;
     background: rgba(0,0,0,0.25);
     text-align: center;
     content: attr(title);
     font-size: 1.1rem;
     color: #fff;
   }
-<<<<<<< HEAD
+  #stage2 {
+/*    margin: 1rem auto;*/
+    width: 100%;
+  }
+
+  #stage2 a {
+/*    position:absolute;*/
+  }
+  #stage2 a img{
+/*
+    padding: .5rem;
+    border: .15rem solid #ccc;
+    background: #fff;
+*/
+      width: 35vw;
+  }
+
+  #stage2 a:nth-of-type(1) {
+    animation-name: fader;
+    animation-delay: 4s;
+    animation-duration: 1s;
+    z-index: 20;
+      position: absolute;
+      width: 100%;
+      display: block;
+  }
+  #stage2 a:nth-of-type(2) {
+    z-index: 10;
+      display:inherit !important;
+      width: 35vw;
+  }
+  #stage2 a:nth-of-type(n+3) {
+    display: none;
+      width: 100%;
+  }
+
+  #stage2 a::after {
+    position: relative;
+      display: block;
+    padding: 0px;
+      bottom: 1.725rem;
+/*    width: calc(100% - 22px);*/
+      width: 35vw;
+    background: rgba(0,0,0,0.25);
+    text-align: center;
+    content: attr(title);
+    font-size: 1.1rem;
+    color: #fff;
+  }
+
+
   #stage3 {
 /*    margin: 1rem auto;*/
     width: 100%;
@@ -451,7 +471,6 @@ a:hover {
 
   #stage3 a {
 /*    position:absolute;*/
-      width: 100%;
   }
   #stage3 a img{
 /*
@@ -459,7 +478,7 @@ a:hover {
     border: .15rem solid #ccc;
     background: #fff;
 */
-      width: 100%;
+      width: 40vw;
   }
 
   #stage3 a:nth-of-type(1) {
@@ -473,11 +492,11 @@ a:hover {
   }
   #stage3 a:nth-of-type(2) {
     z-index: 10;
-      display: block;
-      width: 100% !important;
+      display:inherit !important;
+      width: 35vw;
   }
   #stage3 a:nth-of-type(n+3) {
-    display: none;
+    display: none;.5
       width: 100%;
   }
 
@@ -489,10 +508,9 @@ a:hover {
     position: relative;
       display: block;
     padding: 0px;
-      margin-left: .7rem;
-      bottom: 2.5rem;
+      bottom: 1.725rem;
 /*    width: calc(100% - 22px);*/
-      width: 94%;
+      width: 35vw;
     background: rgba(0,0,0,0.25);
     text-align: center;
     content: attr(title);
@@ -503,3 +521,5 @@ a:hover {
 hr.style6 {
   border-top: 2px dotted pink;
 }
+
+.mySlides {display:none;}
