--- a/philanthropy.css
+++ b/philanthropy.css
@@ -79,7 +79,7 @@ h5{
 }
 
 .title-style{
-  font-family:Petit Formal Script;
+  font-family:'Petit Formal Script', cursive;
   font-size:2.25em;
   color: #FFBFB7;
   text-align:center;
