--- a/aboutus.css
+++ b/aboutus.css
@@ -3,7 +3,9 @@
 @import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script');
 
 
-
+hr.style6 {
+  border-top: 2px dotted pink;
+}
 
 
 .navbar{
