--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=League+Script|Quicksand:300,400,500,700');
 @import url(https://fonts.googleapis.com/css?family=Handlee);
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script);
@@ -18,44 +17,6 @@ body {
   }
 }*/
 
-h1 {
-  font-family: Quicksand;
-  text-transform: uppercase;
-  font-size: 3.5em;
-/*  font-size: 3.2vw;*/
-}
-
-h2 {
-  font-family: Quicksand;
-  font-weight: bold;
-  font-size: 1.2em;
-  text-align: center;
-/*  font-size:3.2vw;*/
-}
-
-
-h3 {
-  font-family: Quicksand;
-  font-size: 1.5em;
- /* font-size:2.3vw;*/
-}
-
-h4 {
-  font-family: "Dancing Script";
-  font-size: 2.4em;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: 500;
-  line-height: 26.4%;
-}
-
-h5{
-  font-family: Quicksand;
-  font-size: 1em;
-/*  font-size:1.5vw;*/
-}
-
-
 
 .navbar{
   font-family: 'Quicksand', sans-serif;
@@ -67,12 +28,12 @@ a:hover{
 }
 
 .logo {
-  width: 30%;
-  height: auto;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top:2.5%;
+  width: 30% !important;
+  height: auto !important;
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-top:2.5% !important;
 }
 
 /*------BANNER START------*/
@@ -89,64 +50,46 @@ a:hover{
 }
 /* BANNER END */
 
-.info {
+/*---------------Welcome Statement Start--------------------*/
+.welcome{
+  font-family: 'Quicksand', sans-serif;
+  font-size:1.25em;
+  margin-bottom: 5%;
+}
+
+/*---------------------------Welcome End--------------------*/
+.welcome-title {
+  text-align: center;
   margin-top: 5%;
-  
-}
-
-/*------------------EVENTS PAGE START-------------------*/
-@media (max-width: 375px) {
-    .events-spacing {
-        width: 65%;
-    }
-}
-
-@media (max-width: 414px) {
-    .events-spacing {
-        width: 65%;
-    }
-}
-
-.month-title {
-    text-align: center;
-  margin-top: 5%;
-  font-size:4em;
+  font-size:2.25em;
   color: #FFBFB7;
   font-weight: bold;
   font-family: 'Petit Formal Script', cursive;
 }
-.events-page {
-  margin-top: 2.5em;
-  font-family: Quicksand;
-  margin-bottom: 2.5em;
+
+
+/*----------BUTTON----------------*/
+.button-content {
+  text-align: center;
 }
 
-.events-page > h1 {
-  font-family: Quicksand;
-  text-transform: uppercase;
-  font-size: 7em;
-  font-size: 3.2vw;
+.button {
+    background-color: #FFBFB7;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.25em;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 1.25em;
+    font-weight: bold;
+    border-radius: 10px;
+    margin-bottom: 10%
 }
-
-.events-spacing{
-  margin-top:5%;
-  margin-bottom: 7.5%;
-}
-
-.eventbox{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-
-
-/* EVENTS PAGE END */
 
 
 /* Grid styles -------------------------------------------------*/
@@ -351,12 +294,6 @@ a:hover {
 }
 
 /* FOOTER END */
-
-
-
-
-
-
 
 
 
