--- a/css/leadership.css
+++ b/css/leadership.css
@@ -32,6 +32,14 @@ a:hover{
   display:block;
 }
 
+.execboard {
+  font-family: 'Petit Formal Script';
+  font-size: 2.25em;
+  color: #FFBFB7;
+  text-align: center;
+  margin-top:5%;
+}
+
 /* Header*/
 h1{
 	text-align: center;
@@ -134,6 +142,7 @@ h5{
 	border-color: #FFFFFF !important;
 	padding:7px !important;
 }
+
 
 /*---------------------------FOOTER START--------------------*/
 .ginsystem-login {
