fixed stlying for all pages and fixed footer hover

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -286,11 +286,11 @@ h2{
 }
 
 .ho:hover {
-    opacity: 0.5;
+    opacity: 0.5 !important;
 }
 
 a:hover {
-    color: white;
+    color: #ff8778 !important;
     text-decoration-line: none;
 }
 
