--- a/css/leadership.css
+++ b/css/leadership.css
@@ -284,11 +284,11 @@ h5{
 }
 
 .ho:hover {
-    opacity: 0.5;
+    opacity: 0.5 !important;
 }
 
 a:hover {
-    color: white;
+    color: #ff8778 !important;
     text-decoration-line: none;
 }
 
