--- a/css/recruitment.css
+++ b/css/recruitment.css
@@ -82,8 +82,13 @@ hr.style {
   font-weight: bold;
 }
 
-a:hover{
-  color: #FFBFB7 !important;
+.ho:hover {
+    opacity: 0.5 !important;
+}
+
+a:hover {
+    color: #ff8778 !important;
+    text-decoration-line: none;
 }
 
 .link {
